issue #11 removed overflow of landing image

--- a/src/components/mixins-pages/landing/landing.scss
+++ b/src/components/mixins-pages/landing/landing.scss
@@ -7,7 +7,7 @@ body {
   min-width: 20rem;
   max-width: 100%;
   &__image-wrapper {
-    height: 51.875rem;
+    min-height: 51.875rem;
     overflow: hidden;
     position: relative;
     background-image: url('../../../assets/img/rooms/main-picture.jpg');
@@ -17,6 +17,7 @@ body {
     margin: 0 auto;
     margin-top: 4.375rem;
     width: 72.5rem;
+    margin-bottom: 2rem;
   }
   &__text-frame {
     max-width: 18.5625rem;
